---------------------------------------------------------------------------------------------------
Version: 1.0.6
  Changes:
    - New Tiberium Ore icon (and all icons for all recipes which included the old Tiberium Ore icon)
    - Tiberium is now significantly better at killing trees
    - Lowered selection priority of Tiberium Blossom Trees, so you can now mine things from underneath them
    - Updated outdated setting decriptions
    - Removed deprecated items, so they stop showing up as options for filters
    - Updated Liquid Tiberium Bomb to use the new atomic bomb explosion animation
  Bugfixes:
    - Fixed scripts not recognizing some structures when converting from Beta version of mod to main version of mod
    - Fixed off-by-1 error where Growth Accelerators had the bonus from an extra level of speed research
    - Fixed conversion crash when converting from very old saves
    - Fixed unpowered SRF Emitters blocking Tiberium growth
    - Fixed passengers in MARVs multiplying the amount of ore harvested
    - Fixed pipette tool not working on Growth Accelerators
    - Fixed Blossom Trees being added when no Tiberium node exists
    - Fixed miners not accounting for newly grown Tiberium Ore in their circuit network signal
---------------------------------------------------------------------------------------------------
Version: 1.0.5
  Changes:
    - Added warning to not run the main Tiberium mod and the beta Tiberium mod at the same time
    - Lowered selection priority of SRF walls, so you can now mine things from underneath SRF walls
    - Tiberium Science now makes labs illuminate with bright green light when the DiscoScience mod is active
    - Tiberium Only map gen preset now generated earlier during startup so that other mods will be more likely to correctly apply their changes to it
  Bugfixes:
    - Fixed mining drills placed before Tiberium mod was present not activating when Tiberium ore grows underneath them